--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,6 +12,7 @@ html(lang="ua")
 		-//Apple
 		meta(name="apple-mobile-web-app-status-bar-style", content="#63b945")
 		link(rel="shortcut icon", href="images/favicon.png")
+		link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet")
 		link(href="css/style.min.css", rel="stylesheet")
 	body
 		include ../app/promo/_promo.pug
