--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,13 +2,45 @@
 $sm: 660px;
 $md: 960px;
 $lg: 1200px;
-$xl: 1440px;
-
-
-//margins, padings
-$wrap-width: 1200px;
+// $xl: 1440px;
 
 
 //colors
+$primary: #4c8cf5;// 1 2
+
+$white: #ffffff;// 1 2
+
+$black: #000000;
+$black-2: #202020;//  2
+$black-3: #303030;
+$black-010: rgba(0, 0, 0, 0.1); // 3
+$black-025: rgba(0, 0, 0, 0.25);// 3
+$black-009: rgba(31, 31, 31, 0.09);// 3
+$black-030: rgba(31, 31, 31, 0.3);// 3
+
+$brownish-grey: #6a6a6a;// 1
+$pale-grey: #f4f5f9; // 1 2
+$pale-grey-2: #e6e7eb;//   2
+$pinkish-grey: #cbc6c0;//1
+$warm-grey: #999999;// 1
+$warm-grey-075: rgba(153, 153, 153, 0.75); //1
+
+$charcoal: #0b0c0b;
+$gunmetal: #4a4c55;
+$silver: #d8d9db;// 2
+
+$font-primary: 'Open Sans', sans-serif;
+$font-secondary: 'Source Sans Pro', sans-serif;
+
+$hover-color: lighten($primary, 5%);
+$active-color: darken($primary, 5%);
+
+
+
+
+
+
+
+
 
 
