--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -9,7 +9,7 @@ section.promo
           li.menu__item
             a(class='menu__link', href="#") About
           li.menu__item
-            a(class='menu__link', href="#") Tea
+            a(class='menu__link', href="#") Team
           li.menu__item
             a(class='menu__link', href="#") Services
           li.menu__item
