--- a/src/app/about/_about.pug
+++ b/src/app/about/_about.pug
@@ -1,2 +1,16 @@
-div.
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi repudiandae corrupti officia eius dolore molestias voluptate quia laudantium minus, natus id, dolor incidunt, rem eum excepturi animi saepe culpa ducimus.
+section.about
+	.about-wrap
+		h2.about__title About&nbsp;us
+		p.about__txt.txt--bold We&nbsp;bring your ideas to&nbsp;life.
+		p.about__txt Our mission is&nbsp;to&nbsp;help our clients to&nbsp;achieve success. With team of&nbsp;experienced developers, analysts, managers, Quality Assurance engineers and consultants, we&nbsp;build optimal solutions to&nbsp;support client business.
+		p.about__txt We&nbsp;follow modern approaches to&nbsp;minimize solution cost and improve overall quality:
+		ul.about__list
+			li.about__item Automated software testing
+			li.about__item Prototyping
+			li.about__item UI/UX
+			li.about__item Agile (Scrum, Kanban) and Waterfall methodologies
+			li.about__item MVP Development
+			li.about__item Postproduction support
+			li.about__item Employee training
+			li.about__item User and administrator documentation
+		a.btn(href='assets/MPSCompanyPresentationWEB.pdf' target='_blank') Company presentation
