--- a/src/app/about/_about.scss
+++ b/src/app/about/_about.scss
@@ -1,3 +1,19 @@
-div {
-	color: #000;
+.about {
+
+	&-wrap {
+		@extend .wrapper, .section-gap;
+	}
+
+	&__title {
+		@extend .title-section;
+		text-align: center;
+	}
+
+	&__txt {
+		@extend .txt-nm;
+	}
+
+	&__list {
+		@extend .txt-nm;
+	}
 }
