--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -9,7 +9,7 @@
 		bottom: 0;
 		right: 0;
 		left: 0;
-		width: 100vw;
+		width: 100%;
 		height: 40px;
 		background: url(./../img/bg-triangle-bottom.svg) top center no-repeat;
 		background-size: auto 100%;
