--- a/src/scss/_styleguide.scss
+++ b/src/scss/_styleguide.scss
@@ -123,12 +123,14 @@ body {
 	}
 }
 
-.shadow-btn {
-	box-shadow: 0px 2px 4.8px 0.3px $black-025;
-}
 
 
 //typograohy
+p {
+	margin-top: 0;
+	margin-bottom: .875rem;
+}
+
 .txt-promo--lg {
 	@extend .color--pale-grey;
   font-size: 4.5rem;
@@ -156,6 +158,9 @@ body {
   font-family: $font-secondary;
   font-size: 2.25rem;
   font-weight: bold;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 
@@ -208,13 +213,7 @@ body {
   font-size: .875rem;
 }
 
-.txt-nm--primary {
-	font-size: .875rem;
-	line-height: 2.07;
-}
-
-.txt-nm--secondary {
-	font-family: $font-secondary;
+.txt-nm {
 	font-size: .875rem;
 	line-height: 2.07;
 }
@@ -228,6 +227,10 @@ body {
   letter-spacing: 0.9px;
 }
 
+.txt--bold {
+	font-weight: 600;
+}
+
 //buttons
 .btn {
 	@extend .bg--primary, .color--white;
@@ -239,11 +242,13 @@ body {
   font-weight: bold;
   letter-spacing: 0.1px;
   text-align: center;
-	line-height: 4.5;
+	line-height: 4;
 	padding-left: 2.875rem;
 	padding-right: 2.875rem;
 	outline: none;
 	border: none;
+	box-shadow: 0px 2px 4.8px 0.3px $black-025;
+	border-radius: 4px;
 	transition: all .2s ease-in-out;
 
 	&:hover,
