--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -5,18 +5,18 @@ section.promo
           img(src='../img/logo.svg', width='138', height='35', alt='MPS Development')
       nav.menu
         button(type='button' class='menu__toggle') show/hide menu
-        ul.menu__list
-          li.menu__item
-            a(class='menu__link', href="#") About
-          li.menu__item
-            a(class='menu__link', href="#") Team
-          li.menu__item
-            a(class='menu__link', href="#") Services
-          li.menu__item
-            a(class='menu__link', href="#") Portfolio
-          li.menu__item
-            a(class='menu__link', href="#") Contact
+          span.menu__toggle-line
+        //ul.menu__list
+        //  li.menu__item
+        //    a(class='menu__link', href="#") About
+        //  li.menu__item
+        //    a(class='menu__link', href="#") Team
+        //  li.menu__item
+        //    a(class='menu__link', href="#") Services
+        //  li.menu__item
+        //    a(class='menu__link', href="#") Portfolio
+        //  li.menu__item
+        //    a(class='menu__link', href="#") Contact
   .promo__text
     h1(class='promo__title') WELCOME TO MPS DEVELOPMENT
     p(class='promo__subtitle') Professional software engineering services
-    .promo__slogan
