Auto stash before merge of "markup_skaya" and "origin/pavel"

--- a/src/app/about/_about.pug
+++ b/src/app/about/_about.pug
@@ -1,5 +1,7 @@
 section.about
 	.about-wrap
+		.about__img-wrap
+			img.about__img(src="img/about.png", alt="Abou Us")
 		h2.about__title About&nbsp;us
 		p.about__txt.txt--bold We&nbsp;bring your ideas to&nbsp;life.
 		p.about__txt Our mission is&nbsp;to&nbsp;help our clients to&nbsp;achieve success. With team of&nbsp;experienced developers, analysts, managers, Quality Assurance engineers and consultants, we&nbsp;build optimal solutions to&nbsp;support client business.
@@ -13,4 +15,4 @@ section.about
 			li.about__item Postproduction support
 			li.about__item Employee training
 			li.about__item User and administrator documentation
-		a.btn(href='assets/MPSCompanyPresentationWEB.pdf' target='_blank') Company presentation
+		a.about__btn(href='assets/MPSCompanyPresentationWEB.pdf' target='_blank') Company presentation
