--- a/src/app/about/_about.pug
+++ b/src/app/about/_about.pug
@@ -1,18 +1,19 @@
-section.about
+article.about
 	.about-wrap
 		.about__img-wrap
 			img.about__img(src="img/about.png", alt="Abou Us")
-		h2.about__title About&nbsp;us
-		p.about__txt.txt--bold We&nbsp;bring your ideas to&nbsp;life.
-		p.about__txt Our mission is&nbsp;to&nbsp;help our clients to&nbsp;achieve success. With team of&nbsp;experienced developers, analysts, managers, Quality Assurance engineers and consultants, we&nbsp;build optimal solutions to&nbsp;support client business.
-		p.about__txt We&nbsp;follow modern approaches to&nbsp;minimize solution cost and improve overall quality:
-		ul.about__list
-			li.about__item Automated software testing
-			li.about__item Prototyping
-			li.about__item UI/UX
-			li.about__item Agile (Scrum, Kanban) and Waterfall methodologies
-			li.about__item MVP Development
-			li.about__item Postproduction support
-			li.about__item Employee training
-			li.about__item User and administrator documentation
-		a.about__btn(href='assets/MPSCompanyPresentationWEB.pdf' target='_blank') Company presentation
+		.about__content
+			h2.about__title About&nbsp;us
+			//- p.about__txt.txt--bold We&nbsp;bring your ideas to&nbsp;life.
+			//- p.about__txt Our mission is&nbsp;to&nbsp;help our clients to&nbsp;achieve success. With team of&nbsp;experienced developers, analysts, managers, Quality Assurance engineers and consultants, we&nbsp;build optimal solutions to&nbsp;support client business.
+			p.about__txt We&nbsp;follow modern approaches to&nbsp;minimize solution cost and improve overall quality:
+			ul.about__list
+				li.about__item Automated software testing
+				li.about__item Prototyping
+				li.about__item UI/UX
+				li.about__item Agile (Scrum, Kanban) and Waterfall methodologies
+				li.about__item MVP Development
+				li.about__item Postproduction support
+				li.about__item Employee training
+				li.about__item User and administrator documentation
+			a.about__btn(href='assets/MPSCompanyPresentationWEB.pdf' target='_blank') Presentation
