--- a/src/scss/_styleguide.scss
+++ b/src/scss/_styleguide.scss
@@ -157,6 +157,7 @@ p {
 .title-section {
   font-family: $font-secondary;
   font-size: 2.25rem;
+  line-height: 1.2;
   font-weight: bold;
   text-transform: uppercase;
   margin-top: 0;
@@ -243,8 +244,8 @@ p {
   letter-spacing: 0.1px;
   text-align: center;
 	line-height: 4;
-	padding-left: 2.875rem;
-	padding-right: 2.875rem;
+	padding-left: 2.25rem;
+	padding-right: 2.25rem;
 	outline: none;
 	border: none;
 	box-shadow: 0px 2px 4.8px 0.3px $black-025;
