--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -1,20 +1,22 @@
 .promo {
-	@extend .wrapper;
 	position: relative;
+	display: flex;
+	flex-direction: column;
 	height: 100vh;
 	padding-bottom: 40px;
+	overflow: hidden;
 	background: #234585 url(./../img/promo-bg.jpg) center no-repeat;
 	background-size: cover;
 	&::before {
 		content: '';
 		position: absolute;
 		bottom: 0;
-		right: 0;
-		left: 0;
+		right: -4px;
+		left: -4px;
 		height: 6vw;
 		background: url(./../img/bg-triangle-bottom.svg) top center no-repeat;
 		background-size: auto 100%;
-		z-index: 2;
+		z-index: 1;
 	}
 
 	&::after {
@@ -26,18 +28,40 @@
 		left: 0;
 		top: 0;
 		background-color: #000;
-		opacity: .7;
+		opacity: .5;
 	}
-	&__title {
+	&__text {
 		position: relative;
-		z-index: 2;
+		z-index: 1;
+		padding-right: 15px;
+		padding-left: 15px;
+		text-align: center;
+		margin: auto;
+	}
+
+	&__title {
+		@extend .txt-promo--lg;
+		span {
+			display: block;
+		}
+	}
+	&__subtitle {
+		@extend .txt-promo--nm;
 	}
 }
 .header {
-	position: relative;
+	position: fixed;
+	right: 0;
+	left: 0;
+	top: 0;
+	height: 60px;
 	z-index: 2;
-
+	transition: .35s;
+	&--color {
+		background-color: #000;
+	}
 	&__inner {
+		@extend .wrapper;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -54,18 +78,44 @@
 	flex: 1 1 auto;
 	width: 100%;
 
+	&--show {
+
+		.menu__toggle-line {
+			background-color: transparent;
+			&::before {
+				transform: rotate3d(0,0,1,45deg);
+			}
+			&::after {
+				transform: rotate3d(0,0,1,-45deg);
+			}
+			&::before,
+			&::after {
+				top: 0;
+				transition: top .3s,transform .3s .5s;
+			}
+		}
+		.menu__dropdown {
+			opacity: 1;
+			visibility: visible;
+			transform: none;
+		}
+		.menu__toggle {
+			position: fixed;
+			right: 0;
+		}
+	}
+
 	&__toggle {
 		position: absolute;
 		top: 0;
 		right: -15px;
-		display: flex;
-		align-items: center;
 		width: 60px;
 		height: 60px;
 		padding: 15px;
 		font-size: 0;
 		background-color: transparent;
 		border: none;
+		z-index: 20;
 	}
 
 	&__toggle-line {
@@ -82,17 +132,63 @@
 			content: "";
 			position: absolute;
 			left: 0;
+			right: 0;
 			width: 100%;
 			height: 3px;
-			background: #fff;
+			background-color: #fff;
 			transform-origin: 50% 50%;
 			transition: top .3s .3s,transform .3s;
 		}
+
 		&::before {
 			top: 10px;
 		}
+
 		&::after {
 			top: -10px;
 		}
+		@media (min-width: $md) {
+			display: none;
+		}
+	}
+
+	&__dropdown {
+		opacity: 0;
+		visibility: hidden;
+		position: fixed;
+		min-width: 50vw;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 3;
+		padding-top: 35px;
+		padding-right: 15px;
+		padding-left: 15px;
+		overflow-y: auto;
+		background: linear-gradient(to bottom, lighten(#4c8cf5, 5%) 0%,rgba(125,185,232,0) 100%);
+		transform: translateX(200%);
+		transition: .15s opacity, .3s transform ease-in;
+		@media (min-width: $md) {
+			position: relative;
+			padding: 0;
+			background-color: transparent;
+			visibility: visible;
+			transform: none;
+		}
+
+	}
+
+	&__list {
+		list-style-type: none;
+		padding: 0;
+	}
+	&__link {
+		display: block;
+		text-align: center;
+		font-size: 20px;
+		line-height: 40px;
+		color: #fff;
+		text-decoration: none;
+
 	}
 }
