changed logo, favicon, linls in menu

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,7 +11,7 @@ html(lang="ua")
 		meta(name="msapplication-navbutton-color", content="#63b945")
 		-//Apple
 		meta(name="apple-mobile-web-app-status-bar-style", content="#63b945")
-		link(rel="shortcut icon", href="images/favicon.png")
+		link(rel="shortcut icon", href="img/fav.png")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet")
 		link(href="css/style.min.css", rel="stylesheet")
 	body
