--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -2,18 +2,18 @@ section.promo
   header.header
     .header__inner
       .header__logo
-        img(src='../img/logo.svg', width='138', height='35', alt='MPS Development')
+        img(src='../img/logo.svg', width='120', height='35', alt='MPS Development')
       nav.menu
         button(type='button' class='menu__toggle js-btn-menu') show/hide menu
           span.menu__toggle-line
         .menu__dropdown
           ul.menu__list
             li.menu__item
-              a(class='menu__link', href="#") About
+              a(class='menu__link', href="#about") About
             li.menu__item
               a(class='menu__link', href="#") Team
             li.menu__item
-              a(class='menu__link', href="#") Services
+              a(class='menu__link', href="#services") Services
             li.menu__item
               a(class='menu__link', href="#") Portfolio
             li.menu__item
