--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,11 +6,11 @@ html(lang="ua")
 		meta(name="description", content="")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		-//Chrome Firefox Opera
-		meta(name="theme-color", content="#63b945")
+		meta(name="theme-color", content="#4C8CF5")
 		-//Windows Phone
-		meta(name="msapplication-navbutton-color", content="#63b945")
+		meta(name="msapplication-navbutton-color", content="#4C8CF5")
 		-//Apple
-		meta(name="apple-mobile-web-app-status-bar-style", content="#63b945")
+		meta(name="apple-mobile-web-app-status-bar-style", content="#4C8CF5")
 		link(rel="shortcut icon", href="img/fav.png")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Source+Sans+Pro:300,400,600,700" rel="stylesheet")
 		link(href="css/style.min.css", rel="stylesheet")
