--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -9,7 +9,7 @@ section.promo
         .menu__dropdown
           ul.menu__list
             li.menu__item
-              a(class='menu__link', href="#about") About
+              a(class='menu__link menu__link--active', href="#about") About
             li.menu__item
               a(class='menu__link', href="#") Team
             li.menu__item
@@ -22,3 +22,7 @@ section.promo
     p(class='promo__subtitle') Professional software engineering services
     h1(class='promo__title') WELCOME TO
       span MPS DEVELOPMENT
+  .promo__bottom-text
+    h2.promo__desc Software development for companies and startups
+    p.promo__sub-desc Java / Angular Teams
+  .promo__bottom-circle
