--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -100,22 +100,22 @@
 		border: 5px solid rgba(255, 255, 255, .5);
 		border-radius: 50%;
 		background-color: $pale-grey;
-		z-index: 5;
-
+		z-index: 1;
 		&::before {
 			content: '';
 			position: absolute;
-			top: 10px;
-			right: 10px;
-			bottom: 10px;
-			left: 10px;
+			top: 5px;
+			left: 50%;
+			margin-left: -17px;
+			width: 34px;
+			height: 34px;
 			background: url(./../img/propeller.svg) center no-repeat;
-			animation: rotation infinite;
+			//animation: rotation 1.5s linear infinite;
 		}
 	}
 	@keyframes rotation {
 		from {
-			transform: rotate(0);
+			transform: rotate(0deg);
 		}
 		to {
 			transform: rotate(360deg);
