--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -232,6 +232,7 @@
 		background-color: transparent;
 		border: none;
 		z-index: 20;
+		cursor: pointer;
 
 		&:focus {
 			outline: none;
@@ -320,11 +321,10 @@
 		@media (min-width: $md) {
 			display: inline-block;
 			vertical-align: top;
-		}
+			margin: 0 25px;
 
-		&:last-child {
-			.menu__link {
-				padding-right: 0;
+			&:last-child {
+				margin-right: 0;
 			}
 		}
 	}
@@ -333,52 +333,77 @@
 		display: inline-block;
 		padding: 0 10px;
 		font-size: 20px;
-		line-height: 40px;
+		line-height: 2.5;
 		color: #fff;
 		text-decoration: none;
 		letter-spacing: 1.2px;
-		transition: .2s;
+		transition: .5s;
 
 		&::before {
 			content: '';
 			position: absolute;
 			background-color: transparent;
 			height: 1px;
+			right: 10px;
+			left: 10px;
+			bottom: 10px;
+			opacity: .7;
+			transform: scale(0);
+			transform-origin: 0;
+			transition: all .5s;
+
 		}
+
+		@media (min-width: $md) {
+			&::before {
+				right: 0;
+				left: 0;
+				bottom: 12px;
+			}
+		}
+
 		&:hover {
-			color: #8f8f8f;
+
+			&::before {
+				background-color: #fff;
+				opacity: 1;
+				transform: scale(1);
+			}
 		}
+
 		&:active {
 			color: darken($primary, 10%);
+
+			&::before {
+				background: darken($primary, 10%);
+			}
 		}
 		&--active {
 			color: $primary;
 
 			&::before {
 				background-color: $primary;
-				right: 10px;
-				left: 10px;
-				bottom: 2px;
+				opacity: 1;
+				transform: scale(1);
 			}
 
 			&:hover {
 				color: $primary;
-			}
-			@media (min-width: $md) {
+
 				&::before {
-					right: 25px;
-					left: 25px;
-					bottom: 12px;
+					background-color: $primary;
 				}
 			}
+
 		}
 
 		@media (min-width: $md) {
-			padding: 0 25px;
+			padding: 0;
 			font-size: 14px;
 			text-transform: uppercase;
 			line-height: 60px;
 			letter-spacing: normal;
+
 
 		}
 	}
