--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -3,7 +3,8 @@
 	display: flex;
 	flex-direction: column;
 	height: calc(100vh - 32px);
-	padding-bottom: 40px;
+	padding-top: 45px;
+	padding-bottom: 34px;
 	background: #234585 url(./../img/promo-bg.jpg) center no-repeat;
 	background-size: cover;
 
@@ -74,7 +75,13 @@
 	}
 
 	.promo__desc {
-		font-size: 1.2rem;
+		padding-right: 15px;
+		padding-left: 15px;
+		font-size: 1rem;
+		@media (min-width: $md) {
+			font-size: 1.2rem;
+
+		}
 	}
 
 	.promo__sub-desc {
@@ -82,12 +89,17 @@
 
 	&__bottom-text {
 		position: relative;
-		align-self: flex-end;
 		margin-right: auto;
 		margin-left: auto;
 		text-align: center;
 		color: #fff;
-		z-index: 2;
+		padding-bottom: 15vh;
+
+		z-index: 1;
+		@media (max-height: 735px) {
+			padding-bottom: 10vh;
+		}
+
 	}
 
 	&__bottom-circle {
@@ -101,6 +113,7 @@
 		border-radius: 50%;
 		background-color: $pale-grey;
 		z-index: 1;
+		animation: rotation 1.5s linear infinite;
 		&::before {
 			content: '';
 			position: absolute;
@@ -110,7 +123,7 @@
 			width: 34px;
 			height: 34px;
 			background: url(./../img/propeller.svg) center no-repeat;
-			//animation: rotation 1.5s linear infinite;
+
 		}
 	}
 	@keyframes rotation {
@@ -350,7 +363,7 @@
 			opacity: .7;
 			transform: scale(0);
 			transform-origin: 0;
-			transition: all .5s;
+			transition: all .3s;
 
 		}
 
