--- a/src/app/footer/_footer.scss
+++ b/src/app/footer/_footer.scss
@@ -41,10 +41,13 @@
 		display: inline-block;
 		padding: 0 10px;
 		transition: all .3s ease;
+		outline: none;
 
 		&:hover,
 		&:focus {
-			color: $primary;
+			&::before {
+				color: $primary;
+			}
 		}
 
 		&:active {
@@ -53,7 +56,7 @@
 
 		&::before {
 			font-family: 'iconfont';
-			font-size: 20px;
+			font-size: 22px;
 		}
 	}
 
