--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -26,3 +26,4 @@ section.promo
     h2.promo__desc Software development for companies and startups
     p.promo__sub-desc Java / Angular Teams
   .promo__bottom-circle
+  .promo__overlay
