--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -7,6 +7,8 @@
 	padding-bottom: 34px;
 	background: #234585 url(./../img/promo-bg.jpg) center no-repeat;
 	background-size: cover;
+	//animation: zoom 20s ease infinite alternate;
+
 
 	&::before {
 		content: '';
@@ -18,6 +20,13 @@
 		background: url(./../img/bg-triangle-bottom.svg) top center no-repeat;
 		background-size: auto 103%;
 		z-index: 1;
+	}
+
+
+	@keyframes zoom {
+		to {
+			transform: scale(1.3)
+		}
 	}
 
 	&::after {
