changed colors in promo, added margins for headers in styleguide,
+ changed hover effect in footer social links

--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -19,11 +19,11 @@ section.promo
             li.menu__item
               a(class='menu__link', href="#") Contact
   .promo__text
-    p(class='promo__subtitle') Professional software engineering services
-    h1(class='promo__title') WELCOME TO
-      span MPS DEVELOPMENT
-  .promo__bottom-text
-    h2.promo__desc Software development for companies and startups
-    p.promo__sub-desc Java / Angular Teams
+    p.promo__subtitle Professional software engineering services
+    h1.promo__title Welcome to
+      span MPS development
+    .promo__bottom-text
+      h2.promo__desc Software development for companies and startups
+      p.promo__sub-desc Java / Angular Teams
   .promo__bottom-circle
   .promo__overlay
