--- a/src/app/footer/_footer.scss
+++ b/src/app/footer/_footer.scss
@@ -40,7 +40,6 @@
 		text-decoration: none;
 		display: inline-block;
 		padding: 0 10px;
-		transition: all .3s ease;
 		outline: none;
 
 		&:hover,
@@ -57,6 +56,7 @@
 		&::before {
 			font-family: 'iconfont';
 			font-size: 22px;
+			transition: all .3s ease-in-out;
 		}
 	}
 
@@ -100,8 +100,9 @@
 		margin-bottom: 0;
 
 		&__item {
-			padding-left: 0;
-			padding-right: 20px;
+			&:first-child {
+				margin-left: -10px;
+			}
 		}
 	}
 }
