--- a/src/scss/_styleguide.scss
+++ b/src/scss/_styleguide.scss
@@ -133,23 +133,35 @@ p {
 	@extend .color--pale-grey;
   font-weight: bold;
   text-align: center;
+  text-transform: uppercase;
 	font-size: 1.65rem;
 	letter-spacing: 3.5px;
 	line-height: 1.5;
 
 	@media (min-width: $md) {
 		font-size: 4.5rem;
-		letter-spacing: 7.2px;
+		letter-spacing: 7px;
+		line-height: 1.1;
 	}
 }
 
 .txt-promo--nm {
 	@extend .color--pale-grey;
   font-family: $font-secondary;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-transform: capitalize;
   letter-spacing: 1.2px;
+  line-height: 1.2;
   text-align: center;
+  margin-top: .5rem;
+  margin-bottom: 1rem;
+
+
+	@media (min-width: $md) {
+		font-size: 1.5rem;
+		margin-top: 0;
+		margin-bottom: 2.875rem;
+	}
 }
 
 .txt-promo--sm {
@@ -158,6 +170,7 @@ p {
   text-align: center;
 	font-size: 1.2rem;
 	letter-spacing: 1.2px;
+
 	@media (min-width: $md) {
 		font-size: .875rem;
 		line-height: 1.71;
