--- a/src/scss/_styleguide.scss
+++ b/src/scss/_styleguide.scss
@@ -131,11 +131,11 @@ p {
 
 .txt-promo--lg {
 	@extend .color--pale-grey;
-  font-weight: bold;
-  text-align: center;
+	font-weight: bold;
+	text-align: center;
 	font-size: 1.65rem;
 	letter-spacing: 3.5px;
-	line-height: 1.5;
+	line-height: 1.2;
 
 	@media (min-width: $md) {
 		font-size: 4.5rem;
@@ -145,17 +145,19 @@ p {
 
 .txt-promo--nm {
 	@extend .color--pale-grey;
-  font-family: $font-secondary;
-  font-size: 1.5rem;
-  text-transform: capitalize;
-  letter-spacing: 1.2px;
-  text-align: center;
+	font-family: $font-secondary;
+	font-size: 1.3rem;
+	text-transform: capitalize;
+	letter-spacing: 1.2px;
+	text-align: center;
+
+
 }
 
 .txt-promo--sm {
 	@extend .color--pinkish-grey;
 
-  text-align: center;
+	text-align: center;
 	font-size: 1.2rem;
 	letter-spacing: 1.2px;
 	@media (min-width: $md) {
@@ -177,26 +179,26 @@ p {
 .subtitle-contact {
 	@extend .color--primary;
 	font-family: $font-secondary;
-  font-size: 1.5rem;
-  font-weight: 600;
-  line-height: 1;
+	font-size: 1.5rem;
+	font-weight: 600;
+	line-height: 1;
 }
 
 .sumbtitle-services {
 	@extend .color--primary;
-  font-size: 18px;
-  font-weight: 600;
-  text-transform: uppercase;
-  text-align: right;
-  line-height: 1.2;
-  margin-top: 0;
-  margin-bottom: 1rem;
+	font-size: 18px;
+	font-weight: 600;
+	text-transform: uppercase;
+	text-align: right;
+	line-height: 1.2;
+	margin-top: 0;
+	margin-bottom: 1rem;
 }
 
 .txt-contact {
 	@extend .color--warm-grey;
-  font-size: 1.125rem;
-  line-height: 1.33;
+	font-size: 1.125rem;
+	line-height: 1.33;
 }
 
 .txt-nm {
@@ -211,10 +213,10 @@ p {
 .txt-nm--light {
 	@extend .color--warm-grey;
 	font-family: $font-secondary;
-  font-size: 1rem;
-  font-weight: 300;
-  line-height: 1.71;
-  letter-spacing: 1.1px;
+	font-size: 1rem;
+	font-weight: 300;
+	line-height: 1.71;
+	letter-spacing: 1.1px;
 
 	@media (min-width: $md) {
 		font-size: .875rem;
@@ -222,30 +224,36 @@ p {
 }
 
 .txt-footer {
-  font-size: .875rem;
-  font-weight: 600;
-  line-height: 1.71;
+	@extend .color--warm-grey-075;
+	font-size: .875rem;
+	font-weight: 600;
+	line-height: 1.71;
 }
 
 .txt-form {
 	@extend .color--warm-grey;
-  font-size: .875rem;
-  font-weight: 600;
-  line-height: 1.71;
+	font-size: .875rem;
+	font-weight: 600;
+	line-height: 1.71;
 }
 
 .txt-nav {
 	@extend .color--pale-grey;
-  font-size: .875rem;
+	font-size: .875rem;
+}
+
+.txt-nm {
+	font-size: .875rem;
+	line-height: 2.07;
 }
 
 .txt--sm {
 	@extend .color--warm-grey;
-  font-family: $font-secondary;
-  font-size: 12px;
-  font-weight: 300;
-  line-height: 1.67;
-  letter-spacing: 0.9px;
+	font-family: $font-secondary;
+	font-size: 12px;
+	font-weight: 300;
+	line-height: 1.67;
+	letter-spacing: 0.9px;
 }
 
 .txt--bold {
@@ -259,10 +267,10 @@ p {
 	cursor: pointer;
 	text-transform: uppercase;
 	text-decoration: none;
-  font-size: .875rem;
-  font-weight: bold;
-  letter-spacing: 0.5px;
-  text-align: center;
+	font-size: .875rem;
+	font-weight: bold;
+	letter-spacing: 0.5px;
+	text-align: center;
 	line-height: 4;
 	padding-left: 2.25rem;
 	padding-right: 2.25rem;
