--- a/src/app/promo/_promo.scss
+++ b/src/app/promo/_promo.scss
@@ -76,11 +76,14 @@
 			bottom: 0;
 			right: 0;
 			left: 0;
-			width: 20%;
+			width: 50px;
 			height: 2px;
 			margin-right: auto;
 			margin-left: auto;
 			background-color: $primary;
+			@media (min-width: $md) {
+				width: 100px;
+			}
 		}
 	}
 
@@ -364,10 +367,10 @@
 			right: 10px;
 			left: 10px;
 			bottom: 10px;
-			opacity: .7;
+			opacity: .9;
 			transform: scale(0);
 			transform-origin: 0;
-			transition: all .3s;
+			transition: all .3s ease-in-out;
 
 		}
 
