--- a/src/scss/_styleguide.scss
+++ b/src/scss/_styleguide.scss
@@ -103,10 +103,6 @@ body {
 }
 
 //shadows
-.shadow-form {
-	box-shadow: 0px 5px 5px 0 $black-010;
-}
-
 .shadow-contact {
 	box-shadow: 0px 3px 5px 0 $black-010;
 }
@@ -192,6 +188,9 @@ p {
   font-size: 1.5rem;
   font-weight: 600;
   line-height: 1;
+  text-transform: uppercase;
+  margin-top: 0;
+	margin-bottom: 1.75rem;
 }
 
 .sumbtitle-services {
@@ -209,6 +208,11 @@ p {
 	@extend .color--warm-grey;
   font-size: 1.125rem;
   line-height: 1.33;
+  text-decoration: none;
+
+  &:last-child {
+  	margin-bottom: 0;
+  }
 }
 
 .txt-nm {
@@ -241,7 +245,7 @@ p {
 
 .txt-form {
 	@extend .color--warm-grey;
-  font-size: .875rem;
+  font-size: 14px;
   font-weight: 600;
   line-height: 1.71;
 }
@@ -281,7 +285,7 @@ p {
 	outline: none;
 	border: none;
 	box-shadow: 0px 2px 4.8px 0.3px $black-025;
-	border-radius: 4px;
+	border-radius: 2px;
 	transition: all .2s ease-in-out;
 
 	&:hover,
@@ -293,4 +297,8 @@ p {
 		background-color: $active-color;
 	}
 
+}
+
+.d-b {
+	display: block;
 }
