--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import 'fonts';
 @import 'styleguide';
+@import "plugins/slick";
 
 @import '../app/promo/promo';
 @import '../app/services/services';
