form on focus styles added

--- a/src/app/contact/_contact.pug
+++ b/src/app/contact/_contact.pug
@@ -38,5 +38,5 @@ article.contact
 				+inputItem('Subject', 'text', 'subject')
 				label.form__label
 						span.form__input-title Message
-						textarea(name='message' autocomplete='off' required).form__input
+						textarea.form__message(name='message' autocomplete='off' required).form__input
 				button.form__btn Send message
