--- a/src/app/contact/_contact.scss
+++ b/src/app/contact/_contact.scss
@@ -128,6 +128,7 @@
 		transition: all .3s ease-in-out;
 
 		&--focused {
+			font-size: 13px;
 			transform: translateY(0);
 			color: $primary;
 		}
@@ -140,6 +141,7 @@
 		z-index: 2;
 		background-color: transparent;
 		@extend .txt-form;
+		font-weight: 300;
 		display: inline-block;
 		width: 100%;
 		border: 0;
@@ -147,9 +149,18 @@
 		outline: 0;
 		transition: all .3s ease-in-out;
 
-		&:focus {
+		&--focused{
 			border-bottom-color: $primary;
 		}
+	}
+
+	&__message {
+		// min-width: 100%;
+		// max-width: 100%;
+		// min-height: 96px;
+		height: 96px;
+		resize: none;
+		// max-height: 96px;
 	}
 
 	&__btn {
