--- a/src/app/contact/_contact.scss
+++ b/src/app/contact/_contact.scss
@@ -116,7 +116,7 @@
 	&__label {
 		@extend .txt-form;
 		display: block;
-		margin-bottom: 1.875rem;
+		margin-bottom: .75rem;
 	}
 
 	&__input-title {
