--- a/src/app/contact/_contact.scss
+++ b/src/app/contact/_contact.scss
@@ -122,6 +122,7 @@
 	&__input-title {
 		position: relative;
 		z-index: 1;
+		line-height: 14px;
 		display: inline-block;
 		width: 100%;
 		transform: translateY(10px);
