--- a/src/scss/plugins/_slick.scss
+++ b/src/scss/plugins/_slick.scss
@@ -94,6 +94,9 @@
         height: auto;
         border: 1px solid transparent;
     }
+    &:focus {
+        outline: none;
+    }
 }
 .slick-arrow.slick-hidden {
     display: none;
