--- a/src/app/partners/_partners.pug
+++ b/src/app/partners/_partners.pug
@@ -1,6 +1,7 @@
 section.partners
   .partners__inner
-    h2.partners__title Our partners
+    .wrapper.content--underlined
+      h2.partners__title Our partners
     ul.partners__list.js-partners-slider
       li
         a(href="#" class="partners__link")
