--- a/src/app/partners/_partners.scss
+++ b/src/app/partners/_partners.scss
@@ -20,7 +20,7 @@
 	&__title {
 		@extend .title-section, .color--brownish-grey;
 		position: relative;
-		margin-bottom: 4.375rem;
+		// margin-bottom: 4.375rem;
 		text-align: center;
 		color: $brownish-grey;
 	}
