--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -1,4 +1,4 @@
-section.promo
+.promo
   header.header
     .header__inner
       .header__logo
@@ -18,7 +18,7 @@ section.promo
               a(class='menu__link', href="#") Portfolio
             li.menu__item
               a(class='menu__link', href="#") Contact
-  .promo__text
+  section.promo__text
     p.promo__subtitle Professional software engineering services
     h1.promo__title Welcome to
       span MPS development
