--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,5 +11,7 @@
 @import '../app/works/works';
 @import '../app/team/team';
 @import '../app/partners/partners';
+@import '../app/slogan/slogan';
 @import '../app/contact/contact';
+@import '../app/map/map';
 @import '../app/footer/footer';
