--- a/src/app/works/_works.pug
+++ b/src/app/works/_works.pug
@@ -1,6 +1,7 @@
 article.works
   .wrapper.content--underlined
-    h2.partners__title our latest works
+    h2.works__title our latest works
+    p.works__txt Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum libero quidem a recusandae. Culpa, error dicta, in mollitia odio nemo soluta, suscipit iste esse quae quas iure laboriosam accusamus, illum.
   ul.works__list.js-works
     li
       a(class="works__item" href="#")
