--- a/src/app/works/_works.pug
+++ b/src/app/works/_works.pug
@@ -9,55 +9,55 @@ article.works
           .works__desc-wrap
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/1.png")
+          img(src="img/1.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap
             h3.works__name Cloud-based push notification platform
             p.works__desk
-          img(src="./../img/2.png")
+          img(src="img/2.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap.works__desc-wrap--bottom
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/3.png")
+          img(src="img/3.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap.works__desc-wrap--bottom
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/4.png")
+          img(src="img/4.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/5.png")
+          img(src="img/5.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/6.png")
+          img(src="img/6.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap.works__desc-wrap--bottom
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/7.png")
+          img(src="img/7.png")
     li
       a(class="works__item" href="#")
         .works__content
           .works__desc-wrap.works__desc-wrap--bottom
             h3.works__name Cloud-based push notification platform
             p.works__desk lorem
-          img(src="./../img/8.png")
+          img(src="img/8.png")
 
 
