--- a/src/app/promo/_promo.pug
+++ b/src/app/promo/_promo.pug
@@ -2,7 +2,7 @@
   header.header
     .header__inner
       .header__logo
-        img(src='../img/logo.svg', width='120', height='35', alt='MPS Development')
+        img(src='img/logo.svg', width='120', height='35', alt='MPS Development')
       nav.menu
         button(type='button' class='menu__toggle js-btn-menu') show/hide menu
           span.menu__toggle-line
